# enPAC_detect_mem

./: CMakeLists.txt  SBA.cpp  SBA.h  TBA.h  TGBA.cpp  TGBA.h  main.cpp  product.h  xml2ltl.h
